added results folder and changed config files

--- a/config/default_search_config.json
+++ b/config/default_search_config.json
@@ -1,28 +1,28 @@
 {
     "defaultSearch": [
         {
-            "baseUrl": "https://www.indeed.ie/jobs?"
+            "baseUrl": "https://www.indeed.com/jobs?"
         },
         {
-            "jobTitle": "q=product+owner"
+            "jobTitle": "q=dungeon+master"
         },
         {
-            "location": "l=dublin"
+            "location": "l=new+york"
         },
         {
-            "salary": "%2440%2C000"
+            "salary": null
         },
         {
-            "postsSince": "fromage=10"
+            "postsSince": null
         },
         {
             "sort": "sort=date"
         },
         {
-            "viewJobUrl": "https://www.indeed.ie/viewjob?jk="
+            "viewJobUrl": "https://www.indeed.com/viewjob?jk="
         },
         {
-            "searchTitle": "Product Owner"
+            "searchTitle": "Dungeon Master"
         }
     ]
 }
