--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-# results folder content
+# Config files
+config/default_search_config.json
+config/matching_terms.json
+
+# Results folder content
 results/*
-# exception to results folder
+# Exception to results folder
 !results/.gitkeep.txt
 
 
